# Agentic-AI

./: .gitignore  0. Agentic AI Introduction.ipynb  README.md  pyproject.toml  requirements.txt  ~$entic AI Documentation.docx
Azure_AI_Search/: azure_ai_search_part_01.ipynb  azure_ai_search_part_03.ipynb  azure_openai_embeddings.ipynb
Chnuking_Methods/: .gitignore  semantic_chunking.ipynb
Context Engineering/: Important links.txt  introduction.ipynb
Documentation/: Agentic AI Documentation With LangGraph.docx  ~$entic AI Documentation With LangGraph.docx
LangGraph/: 0. LangGraph Introduction.ipynb  README.md
LangGraph/A_Basic_Implementation/: 1_Design-Basic-Workflow.ipynb  2_langGraph-with-LLM-RAG-Conditional-Edges.ipynb
LangGraph/A_LangGraph_Glossary/: LangGraph_Glossary_01.ipynb  LangGraph_Glossary_02.ipynb  LangGraph_Glossary_03.ipynb  LangGraph_Glossary_04.ipynb  README.md
LangGraph/B_Common_Agentic_Patterns/: 1_Introduction.ipynb  2_Basic_Implementation_of_LangGraph.ipynb  3_Structured_Output.ipynb  4_ReAct_Agent.ipynb  5_Human_in_Loop.ipynb  README.md
LangGraph/D_Multi_Agentic_Patterns/: 1_network_multi_agent.ipynb  2_supervisor_agent.ipynb
MindsDB/: a_Introduction.ipynb
Model Context Protocol (MCP)/: MCP Documentation.docx  README.md
Model Context Protocol (MCP)/1-Custom-MCP-Build/: README.md  client.py  llm.py  main.py  math_server.py  (+2 more)
Phidata/: 0. Phidata Introduction.ipynb  1. Agentic AI RAG with VectorDB.ipynb
Vector DBs/: Milvus-PART-01.ipynb
n8n/: HR_Interview_Calling.json  README.md  n8n Documentation.docx  ~$n Documentation.docx
(+4 files in other folders)
