[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.29",
    "bs4>=0.0.2",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-aws>=0.2.32",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.10",
    "langchain-openai>=0.3.33",
    "langchainhub>=0.1.21",
    "langgraph>=0.6.7",
    "langsmith>=0.4.27",
    "matplotlib>=3.10.6",
    "sentence-transformers>=5.1.0",
]
